syntax = "proto3";
package petri.lend.v1beta1;

import "gogoproto/gogo.proto";
import "petri/lend/v1beta1/lend.proto";
import "petri/lend/v1beta1/params.proto";

option go_package = "github.com/petrichormoney/petri/x/lend/types";

message GenesisState {
  repeated BorrowAsset borrowAsset = 1
  [ (gogoproto.moretags) = "yaml:\"borrowAsset\"", (gogoproto.nullable) = false ];
  repeated Borrow_interest_tracker borrowInterestTracker = 2
  [ (gogoproto.moretags) = "yaml:\"borrowInterestTracker\"", (gogoproto.nullable) = false ];
  repeated LendAsset lendAsset = 3
  [ (gogoproto.moretags) = "yaml:\"lendAsset\"", (gogoproto.nullable) = false ];
  repeated Pool pool = 4
  [ (gogoproto.moretags) = "yaml:\"pool\"", (gogoproto.nullable) = false ];
  repeated AssetToPairMapping assetToPairMapping = 5
  [ (gogoproto.moretags) = "yaml:\"assetToPairMapping\"", (gogoproto.nullable) = false ];
  repeated PoolAssetLBMapping poolAssetLBMapping = 6
  [ (gogoproto.moretags) = "yaml:\"poolAssetLBMapping\"", (gogoproto.nullable) = false ];
  repeated Lend_rewards_tracker lendRewardsTracker = 7
  [ (gogoproto.moretags) = "yaml:\"lendRewardsTracker\"", (gogoproto.nullable) = false ];
  repeated UserAssetLendBorrowMapping userAssetLendBorrowMapping = 8
  [ (gogoproto.moretags) = "yaml:\"userAssetLendBorrowMapping\"", (gogoproto.nullable) = false ];
  repeated ReserveBuybackAssetData reserveBuybackAssetData = 9
  [ (gogoproto.moretags) = "yaml:\"reserveBuybackAssetData\"", (gogoproto.nullable) = false ];
  repeated Extended_Pair extended_Pair = 10
  [ (gogoproto.moretags) = "yaml:\"extended_Pair\"", (gogoproto.nullable) = false ];
  repeated AuctionParams auctionParams = 11
  [ (gogoproto.moretags) = "yaml:\"auctionParams\"", (gogoproto.nullable) = false ];
  repeated AssetRatesParams assetRatesParams = 12
  [ (gogoproto.moretags) = "yaml:\"assetRatesParams\"", (gogoproto.nullable) = false ];
}
